[workspace]
members = ["macros"]

[workspace.package]
edition = "2021"
authors = ["IdanArye <idanarye@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/idanarye/bevy-yoetz"
documentation = "https://docs.rs/bevy-yoetz"
readme = "README.md"
categories = ["game-development"]
keywords = ["bevy", "gamedev", "game-ai"]

[package]
name = "bevy-yoetz"
description = "A decision-making AI for the Bevy game engine"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
exclude = [
    "assets",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-yoetz-macros = { version = "0.1.0", path = "macros" }
bevy = { version = "^0.14", default-features = false }

[dev-dependencies]
bevy = { version = "^0.14", default-features = false, features = ["bevy_sprite", "bevy_text", "default_font", "x11"] }
turborand = "0.10.1"
# ordered-float = "^4"

# Note: these are needed for the WASM example to work
criterion = { version = "0.5", default-features = false }
instant = { version = "0.1", features = ["wasm-bindgen"] }

# Temporary. Needed for the WASM build to work
bevy_pbr = { version = "0.14.0-rc.4" } 
